# ai-engineering-cohort-3

./: MULTI_AGENT_WORKFLOW_GUIDE.md  pmi-overview.md
.cursor/skills/transcript-summarizer/: SKILL.md
capstone/: voice-dictation-replication-research.md
capstone/voice-dictation/: phase-0-validate-prerequisites.md  phase-1-audio-capture-pipeline.md  phase-2-asr-integration.md  phase-3-end-to-end-dictation.md  phase-4-polish-and-packaging.md  plan-of-work.md
capstone/voice-dictation/plan-of-work/: phase-1-audio-capture-pipeline-execplan.md
project_1/: review-session-complete-summary.md
project_1/review-session/: review-session-transcript-part1-summary.md  review-session-transcript-part1.txt  review-session-transcript-part2-summary.md  review-session-transcript-part2.txt  review-session-transcript-part3-summary.md  review-session-transcript-part3.txt  review-session-transcript.txt
project_2/: PORTFOLIO_RAG_EXECPLAN.md  RAG_PLAN_REVIEW.md  RAG_PORTFOLIO_DEPLOYMENT_PLAN.md  environment.yml
project_3/: ask_the_web_agent.ipynb  ask_the_web_agent_run.ipynb  ask_the_web_agent_solution.ipynb  chainlit_app.py  environment.yml  pyproject.toml  requirements.txt
project_4/: deep_research.ipynb  environment.yaml  requirements.txt
project_5/: multimodal_agent.ipynb
wk-3-agents/: guided-learning-one-pager.md
wk-3-agents/transcripts/deep-dive/: transcript-complete-summary.md  transcript-part1-summary.md  (+16 more)
wk2-rag/: office-hours-complete-summary.md
wk4-reasoning/: deep-dive-complete-summary.md  guided-learning-complete-summary.md  guided-learning-high-level-summary.md
(+89 files in other folders)
